cmake_minimum_required(VERSION 3.26)
project(DataStructure)

set(CMAKE_CXX_STANDARD 17)

add_executable(DataStructure main.cpp)
add_executable(Order_List_static chapter01/Linear_List/Order_List_static.cpp)
add_executable(Order_List_dynamic chapter01/Linear_List/Order_List_dynamic.cpp)
add_executable(test01 chapter01/Linear_List/test01.cpp)
add_executable(stack_static chapter02/Statck/Static/stack_static_01.cpp)
add_executable(stack_static_02 chapter02/Statck/Static/stack_static_02.cpp)
add_executable(stack_staticShare chapter02/Statck/Static/stack_staticShare.cpp)
add_executable(stack_dynamic chapter02/Statck/Dynamic/stack_dynamic.cpp)
add_executable(Queue_static chapter02/Queue/Static/Queue_static.cpp)
add_executable(Queue_static_size chapter02/Queue/Static/Queue_static_size.cpp)
add_executable(Queue_static_tag chapter02/Queue/Static/Queue_static_tag.cpp)
add_executable(Queue_Dynamic_head chapter02/Queue/Dynamic/Queue_Dynamic_head.cpp)
add_executable(Queue_Dynamic_withoutHead chapter02/Queue/Dynamic/Queue_Dynamic_withoutHead.cpp)
add_executable(Queue_static_n-1 chapter02/Queue/Static/Queue_static_n-1.cpp)
add_executable(bracket_Static chapter02/Statck/Bracket/bracket_Static.cpp)
add_executable(Satck_dynamic_code chapter02/pratice/Satck_dynamic_code.cpp)
add_executable(Stack_stack_pratice chapter02/pratice/Stack_stack_pratice.cpp)
add_executable(Stack_codeConvert chapter02/pratice/Stack_codeConvert.cpp)